# Tetris_Game-CSC10003_FinalProject

./:  class_diagram.md  .gitattributes  .gitignore  Architecture.md  CMakeLists.txt  DesignPattern.md  Dockerfile  Doxyfile  Makefile  README.md  RulesOfCode.md  docker-compose.yml  rules_of_code.md  source.sln
cmake-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  TetrisTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_block_i.vcxproj  test_block_i.vcxproj.filters  test_block_j.vcxproj  test_block_j.vcxproj.filters  test_block_l.vcxproj  test_block_l.vcxproj.filters  test_block_o.vcxproj  test_block_o.vcxproj.filters  test_block_s.vcxproj  test_block_s.vcxproj.filters  test_block_t.vcxproj  test_block_t.vcxproj.filters  test_block_z.vcxproj  test_block_z.vcxproj.filters  test_grid.vcxproj  test_grid.vcxproj.filters  test_move.vcxproj  test_move.vcxproj.filters  test_rotate.vcxproj  test_rotate.vcxproj.filters
docs/: test_case.md  test_plan.md  test_report.md  tetris_game.tag
docs/html/: _app_8cpp.html  _app_8cpp.js  _app_8cpp__incl.map  _app_8cpp__incl.md5  _app_8cpp_source.html  _app_8h.html  _app_8h.js  _app_8h__dep__incl.map  _app_8h__dep__incl.md5  _app_8h_source.html  _audio_service_8cpp.html  _audio_service_8cpp.js  _audio_service_8cpp__incl.map  _audio_service_8cpp__incl.md5  _audio_service_8cpp_source.html  _audio_service_8h.html  _audio_service_8h.js  _audio_service_8h__dep__incl.map  _audio_service_8h__dep__incl.md5  _audio_service_8h__incl.map  _audio_service_8h__incl.md5  _audio_service_8h_source.html  _block_8cpp.html  _block_8cpp__incl.map  _block_8cpp__incl.md5  _block_8cpp_source.html  _block_8h.html  _block_8h__dep__incl.map  _block_8h__dep__incl.md5  _block_8h__incl.map  _block_8h__incl.md5  _block_8h_source.html  _block_controller_8cpp.html  _block_controller_8cpp__incl.map  _block_controller_8cpp__incl.md5  _block_controller_8cpp_source.html  _block_controller_8h.html  _block_controller_8h.js  _block_controller_8h__dep__incl.map  _block_controller_8h__dep__incl.md5  (+840 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  (+41 more)
exported/Core/Graphics/: Color.cpp
resource/: main.cpp
resource/App/: App.cpp  App.h
source/: block.cpp  blocks.cpp  colors.cpp  colors.h  game.cpp  game.h  grid.cpp  grid.h  source.cpp  source.vcxproj  source.vcxproj.filters
source/app/: app.cpp  app.h
source/audio/: audio_service.cpp  audio_service.h
source/blocks/: I_block.cpp  I_block.h  J_block.cpp  J_block.h  L_block.cpp  L_block.h  O_block.cpp  O_block.h  S_block.cpp  S_block.h  T_block.cpp  T_block.h  Z_block.cpp  Z_block.h
source/core/: grid.cpp  grid.h  position.cpp  position.h
source/data/: block.cpp  block.h  blocks.cpp  colors.cpp  colors.h
source/game/: game.cpp  game.h
source/guide/: guide.cpp  guide.h
source2/: main.cpp
source2/App/: App.cpp  App.h
(+122 files in other folders)
